<resources>
    <string name="app_name">RockPaperScissors</string>
    <string name="action_settings">Settings</string>


    <!-- Strings used for fragments for navigation -->

    <!-- Gameplay Fragment-->
    <string name="welcome">Welcome</string>
    <string name="instruction">Instructions: select rock, paper or scissors to play.</string>

    <string name="statistics_title">Your all time statistics</string>
    <string name="statistics">Wins: 8 Draws: 5 Lose: 10</string>

    <string name="result_win">You win!</string>
    <string name="result_lose">Computer wins!</string>
    <string name="result_draw">Draw</string>

    <string name="vs">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>

    <string name="choose_hand">Choose your fate</string>


    <!-- Item Fragment-->
    <string name="placeholder_result">Result</string>
    <string name="placeholder_date">Date</string>

    <!-- History Menu -->
    <string name="history_menu_title">Your Game History</string>
    <string name="history_btn">History</string>
    <string name="back_btn">Back</string>

    <!-- Gameplay Menu -->
    <string name="gameplay_menu_title">Rock Paper Scissors Game</string>
    <string name="delete_btn">Delete</string>


</resources>