<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">


        <TextView
            android:id="@+id/tvVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/vs"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@id/ivYou"
            card_view:layout_constraintStart_toEndOf="@id/ivComputer"
            card_view:layout_constraintTop_toBottomOf="@id/tvDate"
            card_view:layout_constraintVertical_bias="0.366" />

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@color/colorPrimaryDark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tvVS"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvDate"
            card_view:layout_constraintVertical_bias="0.246" />

        <ImageView
            android:id="@+id/ivYou"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@color/colorPrimaryDark"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvVS"
            card_view:layout_constraintTop_toBottomOf="@id/tvDate"
            card_view:layout_constraintVertical_bias="0.246" />

        <TextView
            android:id="@+id/tvComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tvVS"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/ivComputer" />

        <TextView
            android:id="@+id/tvYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/tvVS"
            card_view:layout_constraintTop_toBottomOf="@id/ivYou" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textStyle="italic"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvResultHistory" />

        <TextView
            android:id="@+id/tvResultHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_result"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toTopOf="@id/tvDate"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
